# vibe_docs

./: .gitignore  pyproject.toml
demo/: ask_master_demo.py  mock_demo.py  multi_step.py  run_research.py  simple_research.py
demo_runs/research_manager_20251231_124348/: session_id.json  task_graph.json  task_logs.json
demo_runs/research_manager_20251231_124348/snapshots/: snapshot_20251231_124348.json
demo_runs/research_manager_20251231_124715/: session_id.json  task_graph.json
demo_runs/research_manager_20251231_124715/snapshots/: snapshot_20251231_124715.json
demo_runs/research_manager_20251231_124724/: session_id.json  task_graph.json
demo_runs/research_manager_20251231_124724/snapshots/: snapshot_20251231_124724.json
demo_runs/research_manager_20251231_124732/: session_id.json  task_graph.json
demo_runs/research_manager_20251231_124732/snapshots/: snapshot_20251231_124732.json
tests/: test_research_agent.py
vibe_docs/: __init__.py
vibe_docs/agents/: __init__.py  research_agent.py
