[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe_docs"
version = "0.1.0"
description = "Research agents for document and web research"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ai-orchestration @ git+https://github.com/f-labs-io/ai-orchestration.git@master",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vibe_docs*"]
